# computer-graphics

./: .gitignore  CMakeLists.txt
cmake/: AssimpSettings.cmake  GLbindingSettings.cmake  MiscSettings.cmake  SDL3Settings.cmake  assimp.cmake  sdl.cmake  vulkan.cmake
exercises/: exercises_1.odt  exercises_2.odt  exercises_3.odt  exercises_4.odt  exercises_5.odt  exercises_6.odt  template.odt
include/: app.hpp  audio.hpp  camera.hpp  cmrc_io.hpp  engine.hpp  game_object.hpp  input.hpp  material.hpp  mesh.hpp  pipeline.hpp  shaders.hpp  timer.hpp  transform.hpp  utils.hpp  window.hpp
include/entities/: light.hpp  material.hpp  mesh.hpp  model.hpp  texture.hpp
include/game_objects/: camera.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  primitive.hpp  transform.hpp
include/game_objects/lights/: light_base.hpp  light_point.hpp
shaders/: default.frag  default.fs  default.vert  default.vs  shadowmapping.fs  shadowmapping.vs  shadows.frag  vertcol.frag  vertcol.vert
src/: ext.cpp  main.cpp  shaders.cpp  window.cpp
week_1/: CMakeLists.txt
week_2/: CMakeLists.txt
week_2/include/: engine.hpp  mesh.hpp  pipeline.hpp
week_2/src/: main.cpp  pch.hpp
week_3/: CMakeLists.txt
week_3/assets/shaders/: default.frag  default.vert
week_3/cmake/: sdl.cmake
week_3/include/: engine.hpp  mesh.hpp  pipeline.hpp  window.hpp
week_3/src/: pch.hpp
week_4/: CMakeLists.txt
week_4/assets/shaders/: default.frag  default.vert
week_4/cmake/: sdl.cmake
week_4/include/: camera.hpp  engine.hpp  mesh.hpp  texture.hpp  time.hpp  transform.hpp
week_5/: CMakeLists.txt
week_5/assets/shaders/: textured.frag  vertcols.frag
week_5/include/: engine.hpp  texture.hpp  window.hpp
week_5/src/: pch.hpp
week_6/include/: engine.hpp  mesh.hpp  model.hpp
week_7/assets/shaders/: default.frag
week_7/include/: engine.hpp  mesh.hpp  texture.hpp  transform.hpp  window.hpp
week_8/assets/shaders/: default.frag  shadow.frag
week_8/cmake/: sdl.cmake
week_8/include/: engine.hpp  model.hpp
week_final/assets/models/sponza/: sponza.mtl
week_final/cmake/: opengl.cmake  sdl.cmake
week_final/include/: window.hpp
week_final/include/entities/: model.hpp  texture.hpp
